--- a/padaria.html
+++ b/padaria.html
@@ -13,7 +13,7 @@
 
             <img src="img/tangirina.png" alt="icone tangerina">
 
-            <h1>IMPÓRIO DOM BOSCO</h1>
+            <h1>EMPÓRIO DOM BOSCO</h1>
 
             <nav class="navbar">
 
@@ -38,6 +38,7 @@
 
                 <!-- criamos nossas caixas (DIV) para guardar os elementos do hamburguer quando estiver aberto -->
                 <div class="mobile-menu" id="mobileMenu">
+                    <!-- a class é p estilização e o id é p fz a identificação do elemento -->
 
                     <!-- botão para ser utilizado para fechamento da lista -->
                     <button id="close8utton" class="close">
@@ -98,6 +99,7 @@
         </div>
 
         <div class="img-div"></div>
+        <!-- imagem da fita -->
 
         <main>
             <section id="clients" class="clients-efeito">
@@ -132,7 +134,7 @@
                             loading="lazy">
 
                         <h2>Samuel Rodrigues de Souza</h2>
-                        <p>"pães frescos e de ótima qualidade"</p>
+                        <p>"Pães frescos e de ótima qualidade"</p>
                     </li>
 
                 </ul>
@@ -143,7 +145,7 @@
 
                 <section id="featured-products" class="principais-products">
 
-                    <h2>NOSSOS PRODUTOS</h2>
+                    <h2>PRINCIPAIS PRODUTOS</h2>
                     <!-- div-pai -->
                     <div class="products">
                         <!--caixa muflin  -->
@@ -198,14 +200,60 @@
                             <h4 class="title-products">Pão de metro</h4>
                         </div>
                     </div>
-
                 </div>
 
                 <a href="produtos.html">ver tudo</a>
-
             </section>
 
+            <!-- sessão sobre nós -->
+            <section id="sobre-nos">
+                <!-- título -->
+                <h3>SOBRE NÓS</h3>
+                <!-- parágrafo -->
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quaerat, sunt, similique voluptatum error exercitationem
+                    illum
+                    esse dignissimos mollitia eos rem recusandae, vitae magnam
+                    possimus perferendis ex asperiores ipsam quod ab!
+                </p>
+            </section>
         </main>
+
+        <footer id="contatos">
+
+            <h2>CONTATOS</h2>
+
+            <div>
+                <ul>
+                    <li class="item-menu-footer">
+                        <img src="img/icon-telephone.png" alt="icone telefone"
+                            loading="lazy">
+                        <p>(11) 4002-8922</p>
+                    </li>
+
+                    <li class="item-menu-footer">
+                        <img src="img/icon-local.png" alt="icone local"
+                            loading="lazy">
+                        <p>Rua Dom bosco, 757</p>
+                    </li>
+                </div>
+
+                <div>
+                    <li class="item-menu-footer">
+                        <img src="img/icon-wpp.png" alt="icone whatsapp"
+                            loading="lazy">
+                        <p>(11) 40002-8922</p>
+                    </li>
+
+                    <li class="item-menu-footer">
+                        <img src="img/icon-instagram.png" alt="icone instagram"
+                            loading="lazy">
+                        <p>@emporiodombosco</p>
+                    </li>
+                </div>
+            </ul>
+        </footer>
 
     </body>
 </html>
