--- a/padaria.html
+++ b/padaria.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Impório Dom Bosco</title>
         <link rel="stylesheet" href="padaria.css">
+        <script src="https://unpkg.com/scrollreveal"></script>
         <script src="https://kit.fontawesome.com/568750ff94.js"
             crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
-
             <img src="img/tangirina.png" alt="icone tangerina">
 
             <h1>EMPÓRIO DOM BOSCO</h1>
@@ -256,4 +256,5 @@
         </footer>
 
     </body>
+    <script src="padaria.js"></script>
 </html>
