--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
   <!--Aqui chamamos nossa Section para adicionar informações (tags) à ele  -->
   <section class="form-container"> <!-- Damos um nome para a nossa Section a qual chamará "Form-Conteiner" -->
 
-    
+
     <div class="container"> <!-- Abrimos uma Div para que possamos destacar nosso formulário  -->
 
 
@@ -30,8 +30,7 @@
 
         <div class="input-single"> <!-- Aqui criamos uma divisão para inserirmos nosso Label e Input (Nome e Caixa)  -->
           <input type="text" class="input" autocomplete="off" required id="nome" name="nome">
-          <!-- Atribuimos que é tipo Text, adicionamos um nome para sua classe 
-                                                                                              e desabilitamos a preenchimento automático -->
+          <!-- Atribuimos que é tipo Text, adicionamos um nome para sua classe e desabilitamos o preenchimento automático -->
 
           <label for="nome">Nome</label> <!-- Aqui colocamos o nome que irá aparecer do lado da nossa caixa (input) -->
         </div>
